--- a/private/home.html
+++ b/private/home.html
@@ -2,13 +2,13 @@
 <html>
     <link rel="stylesheet" href="res/styles.css" type="text/css" />
     <body>
-        <div>
+        <div class="alt-area">
             <h1>You're logged in. Woohoo!</h1>
             <h2>Now you can access all the super secret stuff!</h2>
             <h5>Stuff like:</h5>
             <h6>The password to my bank account is... 12345678</h6>
         </div>
-        <div class="login-area">
+        <div>
             <h3>Going so soon?</h3>
             <input type="button" value="Logout" onclick="location='/logout';"/>
         </div>
