--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
         <div class="alt-area">
             <h2>Please login:</h2>
             <div id="msg">&nbsp;</div>
-            <form method="POST" action="/login">
+            <form method="POST" action="/login.html">
                 <input type="text" name="username" placeholder="Username"/>
                 <input type="password" name="password" placeholder="Password"/>
                 <input type="submit"/>
